--- a/docs/scss/_site-navbar.scss
+++ b/docs/scss/_site-navbar.scss
@@ -6,10 +6,11 @@
 	top: 0;
 	width: 100%;
 	// background: $white;
-	// &:hover {
+	//  &:hover {
 	// 	background: $white;
-	// }
-	border-bottom: rgba($white,.7);
+	//  }
+	// border-bottom: rgba($white,.7);
+	background-color: white;
 	.site-logo {
 		font-size: 1.5rem;
 		a {
@@ -40,7 +41,7 @@
 					right: 18px;
 					height: 2px;
 					width: 0;
-					background: $white;
+					background-color: white;
 					transition: .3s all ease-in-out;
 				}
 				&:hover, &.active {
