changing nav bar

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -574,9 +574,9 @@ body:after {
   .sticky-wrapper .site-navbar .site-logo a {
     color: #fff; }
   .sticky-wrapper .site-navbar .site-menu > li > a {
-    color: #fff; }
+    color: rgb(0, 0, 0); }
     .sticky-wrapper .site-navbar .site-menu > li > a:hover, .sticky-wrapper .site-navbar .site-menu > li > a.active {
-      color: #fff !important; }
+      color: #C2E54F !important; }
   .sticky-wrapper.is-sticky .site-navbar {
     background: #fff;
     border-bottom: 1px solid transparent;
