adding team section

--- a/docs/css/bootstrap/bootstrap.css
+++ b/docs/css/bootstrap/bootstrap.css
@@ -5,6 +5,9 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 :root {
+  --code: rgb(0, 105, 146);
+  --design: rgb(72, 192, 78);
+  --art: rgb(223, 17, 223);
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -74,8 +77,14 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   margin-top: 0;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem; 
+  font-size: 22px;
+}
 
+i 
+{
+  font-size: 20px;
+}
 abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
