--- a/docs/css/customStyle.css
+++ b/docs/css/customStyle.css
@@ -54,7 +54,7 @@
 {
     background-color: var(--code);
 }
-.code-color::after
+.code-color::after, .code-color:hover::before
 {
     background: var(--code) !important;
 }
