--- a/docs/css/bootstrap/bootstrap.css
+++ b/docs/css/bootstrap/bootstrap.css
@@ -5,6 +5,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 :root {
+  --lead: rgb(255,0,0);
   --code: rgb(0, 105, 146);
   --design: rgb(72, 192, 78);
   --art: rgb(223, 17, 223);
