added all profiles

--- a/docs/css/bootstrap/bootstrap.css
+++ b/docs/css/bootstrap/bootstrap.css
@@ -5,10 +5,10 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 :root {
-  --lead: rgb(255,0,0);
+  --lead: rgb(231, 44, 138);
   --code: rgb(0, 105, 146);
   --design: rgb(72, 192, 78);
-  --art: rgb(223, 17, 223);
+  --art: rgb(223, 127, 17);
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
