--- a/docs/css/customStyle.css
+++ b/docs/css/customStyle.css
@@ -105,3 +105,34 @@
     color: var(--art);
 }
 
+
+/*Leads Colors */
+
+.color-lead
+{
+    background: var(--lead);
+}
+.lead-background
+{
+    background-color: var(--lead);
+}
+.lead-color::after, .lead-color:hover::before
+{
+    background: var(--lead) !important;
+}
+
+.lead-text
+{
+    color: var(--lead);
+}
+
+.button-hover:hover
+{
+    color: white !important;
+}
+
+.button-hover::before
+{
+    height: 0px !important;
+}
+
