--- a/docs/css/bootstrap/bootstrap.css
+++ b/docs/css/bootstrap/bootstrap.css
@@ -86,6 +86,7 @@ i
 {
   font-size: 20px;
 }
+
 abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
@@ -104,7 +105,9 @@ ol,
 ul,
 dl {
   margin-top: 0;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+  font-size: 20px;
+}
 
 ol ol,
 ul ul,
