--- a/docs/css/customStyle.css
+++ b/docs/css/customStyle.css
@@ -64,6 +64,11 @@
     color: var(--code);
 }
 
+.code-text:hover
+{
+    color: var(--code-hover);
+}
+
 
 
 /* Design Colors */
@@ -82,6 +87,10 @@
 .design-text
 {
     color: var(--design);
+}
+.design-text:hover
+{
+    color: var(--design-hover);
 }
 
 
@@ -103,6 +112,10 @@
 .art-text
 {
     color: var(--art);
+}
+.art-text:hover
+{
+    color: var(--art-hover);
 }
 
 
