--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1000,6 +1000,15 @@ body:after {
     color: #fff;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5); }
 
+    .row-alex {
+      display: flex;
+    }
+    
+    .column-alex {
+      flex: 33.33%;
+      padding: 20px;
+    }
+
 .form .form-control {
   border: none;
   border-radius: 0px;
