--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1009,6 +1009,12 @@ body:after {
       padding: 20px;
     }
 
+    .center-alex {
+      margin: auto;
+      width: 50%;
+      padding: 10px;
+    }
+
 .form .form-control {
   border: none;
   border-radius: 0px;
